gnutls: handle another case of connection-closed-during-handshake

fixes one of the tests with gnutls 3.x

https://bugzilla.gnome.org/show_bug.cgi?id=694812